--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -113,8 +113,12 @@
 }
 
 .order-form__file-name {
+    width: 100%;
     color: $gray-2;
     font-size: 14px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .order-form__file-remove {
